tests/transpiler/x/zig/for_list_collection.zig
// Generated by Mochi Zig transpiler on 2025-07-21 10:57 +0000
const std = @import("std");

pub fn main() void {
    for ([_]i64{1, 2, 3}) |n| {
        try std.io.getStdOut().writer().print("{any}\n", .{n});
    }
}
